[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
edition = "2018"
name = "f24-bbk-scraper"
version = "0.1.0"

[dependencies]
chrono = "0.4.6"
derive_builder = "0.6.0"
env_logger = "0.5.13"
failure = "0.1.2"
log = "0.4.5"
postgres = { version = "0.15.2", features = ["with-chrono"] }
reqwest = "0.9.2"
select = "0.4.2"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
toml = "0.4.8"
